--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-latest": "^6.16.0",
-    "micro": "^6.1.0"
+    "babel-polyfill": "^6.20.0",
+    "source-map-support": "^0.4.9",
+    "micro": "^6.1.0",
+    "nodemailer": "^3.1.7"
   },
   "devDependencies": {
     "ava": "^0.17.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
-    "babel-polyfill": "^6.20.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
     "chalk": "^1.1.3",
@@ -21,7 +23,6 @@
     "ora": "^1.1.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "source-map-support": "^0.4.9",
     "test-listen": "^1.0.0",
     "webpack": "2",
     "xo": "^0.17.1"
