--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
   "author": "ythecombinator <matheus.brasil10@gmail.com>",
   "private": true,
   "dependencies": {
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-latest": "^6.16.0",
-    "micro": "^6.1.0",
-    "nodemailer": "^3.1.7",
-    "nodemailer-mailgun-transport": "^1.2.4",
-    "source-map-support": "^0.4.9"
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-latest": "^6.24.1",
+    "micro": "^7.3.3",
+    "nodemailer": "^4.0.1",
+    "nodemailer-mailgun-transport": "^1.3.5",
+    "source-map-support": "^0.4.15"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-register": "^6.18.0",
+    "ava": "^0.19.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
     "chalk": "^1.1.3",
-    "eslint-config-samtgarson": "^0.0.2",
+    "eslint-config-samtgarson": "0.0.6",
     "nodemon": "^1.11.0",
-    "ora": "^1.1.0",
-    "request": "^2.79.0",
-    "request-promise": "^4.1.1",
-    "test-listen": "^1.0.0",
-    "webpack": "2",
-    "xo": "^0.17.1"
+    "ora": "^1.2.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
+    "test-listen": "^1.0.2",
+    "webpack": "^2.6.1",
+    "xo": "^0.18.2"
   },
   "scripts": {
     "start": "node .",
