--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "eslint-config-samtgarson": "0.0.6",
+    "markdown-toc": "^1.1.0",
     "nodemon": "^1.11.0",
+    "onchange": "^3.2.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "test-listen": "^1.0.2",
@@ -37,7 +39,9 @@
     "build": "node build",
     "test": "ava && xo",
     "test:spec": "ava",
-    "test:lint": "xo"
+    "test:lint": "xo",
+    "docs:TOC": "markdown-toc README.md -i",
+    "docs:TOC:watch": "onchange 'README.md' -- npm run docs:TOC"
   },
   "xo": {
     "ignores": [
